Prevents grass image from jumping on mobile

--- a/assets/css/components/_1_revealing-section.scss
+++ b/assets/css/components/_1_revealing-section.scss
@@ -9,6 +9,10 @@ Usage: codyhouse.co/license
 
 .js {
   .revealing-section {
+    background-image: url('../../img/grass.jpg');
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: auto 100%;
     position: sticky; // bottom value will be set using JS
     min-height: 100vh;
     --reavealing-section-overlay-opacity: 1; // overlay layer opacity - modified using JS
